fix: nav icon text z-index correction

--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ a {
   transform: translate(-50%, -50%);
   top: 50%;
   left: 6.5rem;
-  z-index: -5;
+  /* z-index: -5; */
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
   display: none;
